--- a/cord_20200206/style.css
+++ b/cord_20200206/style.css
@@ -1,7 +1,7 @@
 /* all */
 
 .footer_area{
-    /* display: none; */
+    display: none;
 }
 
 body{
@@ -1006,26 +1006,29 @@ footer p{
             width: 100%;
             background-color: rgba( 0, 0, 0, 0.6 );
             z-index: 100;
-            height: 140px;
+            height: 80px;
         }
         .footer_area_inner{
             width: 90%;
             margin: 0 auto;
-            /* display: flex;
-            align-items: center; */
+            display: flex;
+            align-items: center;
         }
         #anchor{
             background-color:#195A9B;
             text-decoration: none;
             color: #fff;
-            display: block;
+            display: inline-block;
             width: 100%;
             /* padding-top: 25px; */
-            margin-top: 40px;
-            padding-top: 10px;
-            padding-bottom: 10px;
+            margin-top: 10px;
+            padding-top: 5px;
+            padding-bottom: 5px;
             text-align: center;
             font-weight: bold;
+            font-size: 14px;
+            line-height: 1.2;
+            opacity: 0.9;
         }
 
 }
