--- a/cord_20200206/style.css
+++ b/cord_20200206/style.css
@@ -235,7 +235,7 @@ p.mv-middle-txtm{
 
 h2.message-h2{
     background-color: #DBE3F3;
-    width: 100%;
+    /* width: 100%; */
     width: 240px;
     margin: 0 auto;
     padding: 5px 0;
